[package]
name = "sokoban-rs"
version = "1.2.1"
authors = ["Sébastien Watteau"]
description = "An implementation of Sokoban in Rust"
repository = "https://github.com/swatteau/sokoban-rs"
readme = "README.md"
keywords = ["game", "sokoban"]
license = "Apache-2.0"

[dependencies]
bitflags = "1.0.3"
xml-rs = "0.7.0"
clap = { version = "2.31.2", features = ["yaml"] }

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["image", "ttf"]