[package]
name = "sokoban-rs"
version = "1.2.2"
authors = ["Sébastien Watteau"]
description = "An implementation of Sokoban in Rust"
repository = "https://github.com/swatteau/sokoban-rs"
readme = "README.md"
keywords = ["game", "sokoban"]
license = "Apache-2.0"

[dependencies]
bitflags = "1.1.0"
xml-rs = "0.8.0"
clap = { version = "2.33.0", features = ["yaml"] }

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["image", "ttf"]